--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,3 +2,6 @@
 @import "header";
 @import "navbar";
 @import "variables";
+@import "generales";
+@import "social";
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Teko:wght@300&display=swap');
