--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Teko:wght@300&display=swap");
 .footer {
   display: flex;
-  justify-content: end;
+  justify-content: space-around;
   align-items: center;
   background-color: #2f4353;
   background-image: linear-gradient(315deg, #2f4353 0%, #d2ccc4 74%);
@@ -12,10 +13,76 @@
   color: whitesmoke; }
 
 .header {
-  font-family: 'ZCOOL QingKe HuangYou', cursive;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Teko', sans-serif;
+  font-size: xx-large;
   background-color: #b3cdd1;
   background-image: linear-gradient(315deg, #b3cdd1 0%, #9fa4c4 74%); }
 
 .navbar {
   font-family: 'Teko', sans-serif;
   font-size: x-large; }
+  .navbar .navbar-brand {
+    color: #0083af; }
+
+body {
+  background-color: #73a5b6; }
+
+.card {
+  color: #7a00df; }
+  .card .card-title {
+    color: navy; }
+  .card .butt {
+    transition: all 1s ease; }
+    .card .butt:hover {
+      transform: scale(1.2); }
+
+.red {
+  color: red; }
+
+.blue {
+  color: blue; }
+
+.violet {
+  color: violet; }
+
+.lightblue {
+  color: lightblue; }
+
+.btn--facebook :hover {
+  color: #3131e6; }
+
+.btn--twitter :hover {
+  color: #4cc8f1; }
+
+.btn--instagram :hover {
+  color: #c52be4; }
+
+.btn--youtube :hover {
+  color: #dd2d2d; }
+
+.img-productos, .card-img-top {
+  transition: all 2s ease; }
+  .img-productos:hover, .card-img-top:hover {
+    transform: scale(1.3); }
+
+.social {
+  width: 25%; }
+  .social ul {
+    list-style: none;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row; }
+    .social ul li {
+      transition: all 0.5s ease; }
+      .social ul li a {
+        color: #7a00df;
+        text-decoration: none;
+        font-size: 1.5rem; }
+      .social ul li:hover {
+        transform: scale(1.4); }
