--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
     display: flex;
-    justify-content: end;
+    justify-content: space-around;
     align-items: center;
     background-color: #2f4353;
     background-image: linear-gradient(315deg, #2f4353 0%, #d2ccc4 74%);
