--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,5 +1,10 @@
 .header {
-    font-family: 'ZCOOL QingKe HuangYou', cursive;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Teko', sans-serif;
+    font-size: xx-large;
     background-color: #b3cdd1;
     background-image: linear-gradient(315deg, #b3cdd1 0%, #9fa4c4 74%);
 }
