--- a/scss/_generales.scss
+++ b/scss/_generales.scss
@@ -1,6 +1,6 @@
 @if $modo == skynet {
     body {
-        background-color: #73a5b6;
+        background-color: #e9e9e9;
     }
     .card {
         color: $pp_text;
