--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,3 +5,23 @@
 @import "generales";
 @import "social";
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Teko:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
+
+.text-about {
+    font-family: 'Cinzel', serif;
+    color: #000000;
+}
+@media screen and (max-width: 576px) {
+    .card {
+        color: magenta;
+        .card-title {
+            color: slateblue;
+        }
+        .card-img-top {
+            transition: all 3s ease;
+            &:hover {
+                transform: rotate(5deg);
+            }
+        }
+    }
+}
