--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,15 @@
     font-family: 'Cinzel', serif;
     color: #000000;
 }
+.linksdown {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .linkdown {
+        font-family: 'Teko', sans-serif;
+        color: #778899;
+    }
+  }
 @media screen and (max-width: 576px) {
     .card {
         color: magenta;
